<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/weeklySteps"
        android:orientation="vertical"
        android:layout_above="@id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stepsDate0"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/daily_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/noDailySteps0"
            android:textStyle="italic"
            android:text="@string/no_steps_data"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dailyStepsValue0"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stepsDate1"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/daily_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/noDailySteps1"
            android:textStyle="italic"
            android:text="@string/no_steps_data"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dailyStepsValue1"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stepsDate2"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/daily_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/noDailySteps2"
            android:textStyle="italic"
            android:text="@string/no_steps_data"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dailyStepsValue2"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stepsDate3"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/daily_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/noDailySteps3"
            android:textStyle="italic"
            android:text="@string/no_steps_data"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dailyStepsValue3"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stepsDate4"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/daily_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/noDailySteps4"
            android:textStyle="italic"
            android:text="@string/no_steps_data"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dailyStepsValue4"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stepsDate5"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/daily_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/noDailySteps5"
            android:textStyle="italic"
            android:text="@string/no_steps_data"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dailyStepsValue5"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stepsDate6"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/daily_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:visibility="gone"
            android:id="@+id/noDailySteps6"
            android:textStyle="italic"
            android:text="@string/no_steps_data"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dailyStepsValue6"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:visibility="gone"
            android:id="@+id/statusTextView"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"/>
        <Button
            android:id="@+id/readData"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:onClick="onReadClick"
            android:text="@string/read_steps_data"/>
        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:onClick="connectGoogleFit"
            android:text="@string/connect_google_fit"/>

        <Button
            android:visibility="gone"
            android:id="@+id/disconnectButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="disconnectFit"
            android:text="@string/disconnect_google_fit"/>

    </LinearLayout>

</RelativeLayout>